feat: добавлены методы поиска по проектам и задачам
