# docs/swagger.yaml
@@ -987,6 +987,29 @@ definitions:
           $ref: '#/definitions/response.ProjectResponse'
         type: array
     type: object
+  response.ProjectForSearchResponse:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        type: string
+      created_by_user:
+        $ref: '#/definitions/response.UserShort'
+      description:
+        type: string
+      gitlab_project_id:
+        type: integer
+      gitlab_url:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+    type: object
   response.ProjectListResponse:
     properties:
       page:
@@ -1029,7 +1052,7 @@ definitions:
         type: integer
       projects:
         items:
-          $ref: '#/definitions/response.ProjectResponse'
+          $ref: '#/definitions/response.ProjectForSearchResponse'
         type: array
       query:
         type: string
@@ -3140,13 +3163,19 @@ paths:
     get:
       consumes:
       - application/json
-      description: Ищет проекты по имени, описанию или GitLab URL с автодополнением
+      description: 'Ищет проекты по имени, описанию или GitLab URL с автодополнением
         после каждого введенного символа. Поддерживает автоматическую замену раскладки
-        клавиатуры (английская-русская) для расширенного поиска и пагинацию.
+        клавиатуры (английская-русская) для расширенного поиска и пагинацию. Проекты
+        сортируются: сначала проекты где пользователь создатель, потом остальные.'
       parameters:
       - description: Поисковый запрос
         in: query
         name: query
+        required: true
+        type: string
+      - description: ID пользователя для приоритетной сортировки
+        in: query
+        name: user_id
         required: true
         type: string
       - description: Номер страницы
@@ -5200,13 +5229,19 @@ paths:
     get:
       consumes:
       - application/json
-      description: Ищет задачи по названию с автодополнением после каждого введенного
+      description: 'Ищет задачи по названию с автодополнением после каждого введенного
         символа. Поддерживает автоматическую замену раскладки клавиатуры (английская-русская)
-        для расширенного поиска и пагинацию.
+        для расширенного поиска и пагинацию. Задачи сортируются: сначала задачи где
+        пользователь исполнитель, потом где создатель, потом остальные.'
       parameters:
       - description: Поисковый запрос
         in: query
         name: query
+        required: true
+        type: string
+      - description: ID пользователя для приоритетной сортировки
+        in: query
+        name: user_id
         required: true
         type: string
       - description: Номер страницы
