# internal/dto/response/Project.go
@@ -37,5 +37,18 @@ type ProjectSearchResponse struct {
     Page       int                `json:"page"`
     PageSize   int                `json:"pageSize"`
     TotalCount int64              `json:"totalCount"`
-    Projects   []ProjectResponse  `json:"projects"`
+    Projects   []ProjectForSearchResponse  `json:"projects"`
+}
+
+type ProjectForSearchResponse struct {
+	ID              string    `json:"id"`
+	Name            string    `json:"name"`
+	Description     string    `json:"description"`
+	GitlabProjectId int    	  `json:"gitlab_project_id"`
+	GitlabUrl       string    `json:"gitlab_url"`
+	CreatedAt       time.Time `json:"created_at"`
+	UpdatedAt       time.Time `json:"updated_at"`
+	CreatedBy       string    `json:"created_by"`
+	Status          string    `json:"status"`
+	CreatedByUser       UserShort `json:"created_by_user"`
 }
